# hse-cv-project

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: hse_cv.yaml
src/hse_cv_project/: demo.py  demo_app.py  interface.py  utils.py
tests/: test_yolo5_tflite.py
