[project]
name = "hse-cv-project"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pillow==10.3.0",
    "tensorflow==2.16.1",
    "streamlit==1.33.0",
]

[project.optional-dependencies]
develop = [
    "black==24.3.0",
    "coverage==7.4.4",
    "isort==5.13.2",
    "mypy==1.9.0",
    "pytest==8.1.1",
    "ruff==0.3.5",
    "types-setuptools"
]

[build-system]
requires = [
    "build",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]

[tool.ruff]
exclude = [".venv"]
line-length = 120

[tool.black]
line_length = 120

[tool.mypy]
ignore_missing_imports = true


[tool.isort]
profile = "black"

